--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "target": "es6",
         "sourceMap": true,
         "removeComments": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "declaration": true
     },
     "compileOnSave": true,
     "exclude": ["node_modules", "build", "typings/browser", "typings/browser.d.ts"]
