--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "check-types": "^6.0.0",
     "debug": "^2.2.0",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "node-uuid": "^1.4.7"
   },
   "devDependencies": {
     "typescript": "^1.8.9"
   },
   "scripts": {
-    "clean": "rm *.js 2> /dev/null && rm *.map 2> /dev/null",
+    "clean": "rm *.js 2> /dev/null && rm *.map 2> /dev/null && rm ./*.d.ts 2> /dev/null",
     "init": "npm install . && node_modules/.bin/typings install",
     "build": "node_modules/.bin/tsc",
     "prepublish": "npm run clean && npm run build"
