--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "experimentalDecorators": true,
         "declaration": true
     },
-    "compileOnSave": true,
+    "compileOnSave": false,
     "exclude": ["node_modules", "build", "typings/browser", "typings/browser.d.ts"]
 }
